<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_feed"
        android:title="Home"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:id="@+id/menu_media"
        android:title="Media"
        android:icon="@drawable/ic_perm_media_black_24dp"
        />

    <item
        android:id="@+id/menu_notifications"
        android:title="Notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        />

    <item
        android:id="@+id/menu_profile"
        android:title="Profile"
        android:icon="@drawable/ic_person_black_24dp"
        />
</menu>