<resources>
    <string name="app_name">Movey</string>
    <string name="app_desc">Movey is world first social network solely focused
    on media content like movies and series and enable people to connect with common
        favourite content and discover new and amazing media every single day.
    </string>
    <string name="google_maps_key">AIzaSyBQlO0P-ur5YKX4SjbYryxJJajJVJLWl-4</string>
    <string name="action_about">About</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
